# bluecrescent

./: README.md
bluecrescent_control/: CMakeLists.txt  bluecrescent_control_plugin.xml  package.xml
bluecrescent_control/include/bluecrescent_control/: COMMONHW.h  HEADHW.h  LARMHW.h  RARMHW.h  bluecrescent_hw.h  bluecrescent_hw_head.h  bluecrescent_hw_larm.h  bluecrescent_hw_rarm.h
bluecrescent_control/launch/: bluecrescent_control.launch
bluecrescent_control/src/: .trobo_hw.cpp.swp  HEADHW.cpp  LARMHW.cpp  Makefile  RARMHW.cpp  bluecrescent_app.cpp  bluecrescent_control.cpp  bluecrescent_hw.cpp  bluecrescent_hw_head.cpp  bluecrescent_hw_larm.cpp  bluecrescent_hw_rarm.cpp  stepping_head.c
bluecrescent_description/: CMakeLists.txt  bluecrescent.gv  package.xml
bluecrescent_description/launch/: display.launch
bluecrescent_description/urdf/: bluecrescent.urdf  bluecrescent.urdf_
bluecrescent_hw/: CMakeLists.txt  package.xml
bluecrescent_hw/src/: bluecrescent_interface.cpp
bluecrescent_moveit/: .setup_assistant  CMakeLists.txt  package.xml
bluecrescent_moveit/config/: bluecrescent.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
bluecrescent_moveit/launch/: bluecrescent_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_bluecrescent.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
bluecrescent_ros_control/: .package.xml.swp  CMakeLists.txt  package.xml
bluecrescent_ros_control/include/bluecrescent_ros_control/: bluecrescent_hw.h
bluecrescent_ros_control/launch/: bluecrescent_world.launch
bluecrescent_ros_control/src/: bluecrescent_hw.cpp  bluecrescent_rarm_hw.cpp  bluecrescent_ros_control.cpp
